--- a/index.html
+++ b/index.html
@@ -116,9 +116,7 @@
 		});
 	}
 
-	map.attributionControl.addAttribution('Data from <a href="https://data.census.gov/table/ACSDT5Y2023.B02010?q=population+by+race+and+ethnicity&g=050XX00US48453,48453$1500000
-">U.S. Census Bureau, ACS</a>');
-
+	map.attributionControl.addAttribution('Data from <a href="https://data.census.gov/table/ACSDT5Y2023.B02010?q=population+by+race+and+ethnicity&g=050XX00US48453,48453$1500000">U.S. Census Bureau, ACS</a>');
 
 	const legend = L.control({position: 'bottomright'});
 
