--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Child Labor Violations</title>
+	<title>American Indian and Alaska Native Communities - Travis County, TX</title>
 
     <link rel="stylesheet" href="leaflet.css"/>
     <script src="leaflet.js"></script>
