--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 			labels.push(`<i style="background:${getColor(from + 1)}"></i> ${from}${to ? `&ndash;${to}` : '+'}`);
 		}
 
-		div.innerHTML = labels.join('<br>');
+		div.innerHTML = 'AI/AN Population<br>' + labels.join('<br>');
 		return div;
 	};
 
